<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">complaint</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_newcomp">Newcomp</string>
    <string name="hello_world">Hello world!</string>
    <string name="fin_b3">شكوى جديدة</string>
    <string name="title_activity_newcomplaint">تسجيل جديد</string>
    <string name="title_activity_selectimage">متابعة التسجيل</string>

    <string name="title_activity_finish">finish</string>
    <string name="fin_b2">عرض شكاوي مطروحة</string>
    <string name="fin_text1">تمت العملية بنجاح</string>
    <string name="fin_b4">خروج</string>
    <string name="fin_b1">العودة الى القائمة الرئيسية</string>
    <string name="start_b1">شكوى جديدة</string>
    <string name="start_b2">شكاوي مطروحة</string>

        <string-array name="cities_array">
            <item>عمان</item>
            <item>الزرقاء</item>
            <item>مادبا</item>
            <item>عجلون</item>
            <item>جرش</item>
            <item>السلط</item>
            <item>العقبة</item>
            <item>معان</item>
            <item>الكرك</item>
            <item>اربد</item>
            <item>المفرق</item>
            <item>الطفيلة</item>
        </string-array>

    <string name="name_empty">الرجاء إدخال الاسم</string>>
    <string-array name="type_complaint">

        <item>مياه</item>
        <item>كهرباء</item>
        <item>صرف صحي</item>
        <item>طرق</item>
        <item>أخرى</item>


    </string-array>


    <string name="title_activity_main">نظام الشكاوي الالكتروني</string>
    <string name="title_activity_newcomplaint2">متابعة التسجيل</string>
    <string name="title_activity_view_old">view_old</string>
    <string name="title_activity_confirm">Confirm</string>
    <string name="hasNum">الرجاء إدخال الاسم صحيحاً بدون أرقام</string>
    <string name="hasSpc">الرجاء إدخال الاسم الثلاثي و وضع عدد الفراغات صحيحاً</string>
    <string name="shortNum">الرجاء إدخال رقم الهاتف المكون من 10 خانات</string>
    </resources>

