<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.complaint.Finish" >

    <Button
        android:id="@+id/newcom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/exitapp"
        android:layout_alignLeft="@+id/newc"
        android:layout_alignRight="@+id/newc"
        android:layout_marginBottom="30dp"
        style="@style/btnStyleBlackpearl"
        android:text="@string/fin_b3"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/fin_text1"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/exitapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/newcom"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/newcom"
        android:layout_marginBottom="30dp"
        style="@style/btnStyleBlackpearl"
        android:text="@string/fin_b4"/>

    <Button
        android:id="@+id/newc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/newcom"
        android:layout_alignLeft="@+id/exit"
        android:layout_alignRight="@+id/exit"
        android:layout_marginBottom="30dp"
        style="@style/btnStyleBlackpearl"
        android:text="@string/fin_b2"/>

    <Button
        android:id="@+id/exit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/newc"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"

        style="@style/btnStyleBlackpearl"
        android:text="@string/fin_b1" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"

        android:src="@drawable/download" />

</RelativeLayout>